# ChangeLog for media-sound/qjackctl
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/qjackctl/ChangeLog,v 1.73 2012/03/28 09:59:00 ago Exp $

  28 Mar 2012; Agostino Sarubbo <ago@gentoo.org> qjackctl-0.3.8.ebuild:
  Stable for amd64, wrt bug #409705

  27 Mar 2012; Davide Pesavento <pesa@gentoo.org> qjackctl-0.3.8.ebuild:
  Migrate to qt4-r2.eclass, ACK'ed by aballier in bug #409705.

  12 Aug 2011; Kacper Kowalik <xarthisius@gentoo.org> qjackctl-0.3.2.ebuild,
  qjackctl-0.3.7.ebuild, qjackctl-0.3.8.ebuild:
  Drop ppc keyword wrt #331157

*qjackctl-0.3.8 (11 Jul 2011)

  11 Jul 2011; Alexis Ballier <aballier@gentoo.org> +qjackctl-0.3.8.ebuild:
  version bump, bug #374281

  17 Apr 2011; Thomas Kahle <tomka@gentoo.org> qjackctl-0.3.2.ebuild:
  Dropping to ~x86 b/c of bugs 331157, 363915.

  13 Feb 2011; Raúl Porcel <armin76@gentoo.org> qjackctl-0.3.2.ebuild,
  qjackctl-0.3.7.ebuild:
  Drop sparc keywords

  25 Jan 2011; Markos Chandras <hwoarang@gentoo.org> qjackctl-0.3.7.ebuild:
  Stable on amd64 wrt bug #331157

  24 Jan 2011; Alexis Ballier <aballier@gentoo.org> -qjackctl-0.3.4.ebuild,
  -files/qjackctl-0.3.4-noalsagcc4.3.patch, -qjackctl-0.3.5.ebuild,
  -qjackctl-0.3.6.ebuild:
  remove old

*qjackctl-0.3.7 (17 Dec 2010)

  17 Dec 2010; Alexis Ballier <aballier@gentoo.org> +qjackctl-0.3.7.ebuild:
  version bump

*qjackctl-0.3.6 (09 Mar 2010)

  09 Mar 2010; Alexis Ballier <aballier@gentoo.org> +qjackctl-0.3.6.ebuild:
  version bump

  06 Oct 2009; Dominik Kapusta <ayoy@gentoo.org> qjackctl-0.3.2.ebuild,
  qjackctl-0.3.4.ebuild:
  Removed alternative dependency on Qt metapackage

*qjackctl-0.3.5 (01 Oct 2009)

  01 Oct 2009; Alexis Ballier <aballier@gentoo.org> +qjackctl-0.3.5.ebuild:
  version bump

  01 Aug 2009; Samuli Suominen <ssuominen@gentoo.org> qjackctl-0.3.2.ebuild,
  qjackctl-0.3.4.ebuild:
  Remove USE depend for media-libs/alsa-lib[midi].
