@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/qjackctl
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/qjackctl/ChangeLog,v 1.73 2012/03/28 09:59:00 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/qjackctl/ChangeLog,v 1.74 2012/03/28 15:05:29 pesa Exp $
+
+  28 Mar 2012; Davide Pesavento <pesa@gentoo.org> -qjackctl-0.3.2.ebuild,
+  -qjackctl-0.3.7.ebuild:
+  Prune old versions using deprecated qt4.eclass.
 
   28 Mar 2012; Agostino Sarubbo <ago@gentoo.org> qjackctl-0.3.8.ebuild:
   Stable for amd64, wrt bug #409705
